--- a/src/Html/Cliente.html
+++ b/src/Html/Cliente.html
@@ -11,50 +11,13 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="style.css">
     <title>S.O.S. Pneus</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-      }
-
-      .header {
-        background-color: #343a40;
-        color: #ffffff;
-        padding: 1rem;
-        text-align: center;
-      }
-
-      .logo {
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-      }
-
-      .form-select {
-        margin: 20px 0;
-      }
-
-      .results {
-        margin-top: 20px;
-      }
-
-      /* Estilos para os quadrados */
-      .square {
-        width: 1100px; /* Largura personalizável */
-        height: 200px; /* Altura personalizável */
-        background-color: #fcfcfc;
-        border: 2px solid #ccc;
-        border-radius: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-    </style>
   </head>
 
   <body>
     <header class="header">
-      <img src="img SOS.jpg" class="logo" alt="Logo" />
+      <img src="Img/img_SOS.jpg" class="logo" alt="Logo" />
       <h1>Home Cliente</h1>
       <a class="btn btn-primary m-3" href="#" role="button">Home</a>
       <button class="btn btn-primary m-3">Histórico</button>
