--- a/src/Html/Prestador.html
+++ b/src/Html/Prestador.html
@@ -11,37 +11,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+      <link rel="stylesheet" href="style.css">
     <title>S.O.S. Pneus</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-      }
-
-      .header {
-        background-color: #343a40;
-        color: #ffffff;
-        padding: 1rem;
-        text-align: center;
-      }
-
-      .logo {
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-      }
-
-      .form-select {
-        margin: 20px 0;
-      }
-
-      .results {
-        margin-top: 20px;
-      }
-    </style>
   </head>
 
   <header class="header">
-    <img src="img SOS.jpg" class="logo" alt="Logo" />
+    <img src="Img/img_SOS.jpg" class="logo" alt="Logo" />
     <h1>Home Prestador</h1>
     <a class="btn btn-primary m-3" href="#" role="button">Home</a>
     <button class="btn btn-primary m-3">Histórico</button>
@@ -53,53 +28,6 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha1/dist/css/bootstrap.min.css"
   />
-  <style>
-    /* CSS personalizado para o chat */
-    .form-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 20px;
-    }
-
-    .checkbox-container {
-        display: flex;
-        align-items: center;
-        margin-top: 10px;
-    }
-
-    .checkbox {
-        width: 30px;
-        height: 30px;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin-right: 10px;
-    }
-
-    .checkbox i {
-        display: none;
-    }
-
-    .checkbox.selected i {
-        display: block;
-        color: green;
-    }
-
-    /* Estilos para o footer */
-    .footer {
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        background-color: #333;
-        color: #fff;
-        text-align: center;
-        padding: 10px 0;
-    }
-</style>
-</head>
 <body>
 <div class="form-container">
     <select class="form-select" aria-label="Default select example" id="online-offline-select">
