--- a/src/Html/Historico.html
+++ b/src/Html/Historico.html
@@ -4,31 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="style.css">
     <title>S.O.S. Pneus</title>
 </head>
 
-
 <body>
+    <main>
     <header class="header">
         <div class="container-fluid">
-            <img src="Img/img_SOS.jpg" width="100" height="100" class="rounded-circle" alt="Logo">
-            <h1> Histórico </h1>
+            <img src="img SOS.jpg" width="100" height="100" class="rounded-circle" alt="Logo" href = "Principal.html">
+          
+            <h1>Histórico</h1>
             <div class="btn-group">
-                <a class="btn btn-primary m-3" href="#" role="button">Home</a>
+                <a class="btn btn-primary m-3" href="#" role="button" href="Principal.html">Home</a>
                 <button class="btn btn-primary m-3">Histórico</button>
-                <input class="btn btn-primary m-3" type="button" value="Notificações" />
+                <input class="btn btn-primary m-3" type="button" value="Notificações">
             </div>
-            <button class="btn btn-primary m-3">Sair</button>
+            <a href="Principal.html">
+                <button class="btn btn-primary m-3" href="Principal.html">Sair</button>
+            </a>
         </div>
     </header>
 
     <div class="container mt-4">
         <div class="input-group">
-            <label for="tipoUsuario" class="form-label">Selecione um período:</label>
-            <select class="form-select" aria-label="Tipo de Usuário" id="tipoUsuario" name="tipoUsuario">
+               <select class="form-select" aria-label="Tipo de Usuário" id="tipoUsuario" name="tipoUsuario">
                 <option selected disabled>Escolha uma opção</option>
                 <option value="3dias">Últimos 3 dias</option>
                 <option value="7dias">Últimos 7 dias</option>
@@ -36,11 +38,11 @@
                 <option value="dataEspecifica">Data específica</option>
             </select>
 
-            <button class="btn btn-primary search-button">Buscar</button>
+            <button id="btnBuscar" class="p-2 btn btn-primary m-3">Buscar</button>
         </div>
 
-        <table class="history-table">
-            <thead>
+        <table class="table">
+            <thead class="table-dark">
                 <tr>
                     <th>Data da Pesquisa</th>
                     <th>Termo Pesquisado</th>
@@ -58,12 +60,26 @@
             </tbody>
         </table>
     </div>
+</main>
 
-  
+   <footer class="bg-dark text-light text-center py-2">
+        <p>&copy; 2023 S.O.S. Pneus. Todos os direitos reservados.</p>
+    </footer>
+
+
+    <script src="seu-script.js"></script>
 </body>
-<footer class="bg-dark text-light text-center py-2">
-    <p>&copy; 2023 S.O.S. Pneus. Todos os direitos reservados.</p>
-</footer>
+<style>
+    body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 
+main {
+    flex: 1;
+}
+
+</style>
 
 </html>
