--- a/src/Html/Principal.html
+++ b/src/Html/Principal.html
@@ -31,13 +31,38 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
     <style>
-      #conteudo {
-        float: left;
-        width: 75%;
-      }
+      /* Estilo para a barra lateral à esquerda */
       #barralateral {
         float: left;
-        width: 25%;
+        width: 20%;
+      }
+
+      /* Estilo para o conteúdo à direita */
+      #conteudo {
+        float: left;
+        width: 80%;
+      }
+
+      /* Estilo para o carrossel */
+      .carousel {
+        margin: 0 auto;
+        width: 90%; /* Ajuste o tamanho conforme necessário */
+      }
+
+      /* Estilo para os cards */
+      .card-container {
+        display: flex;
+      }
+
+      .card {
+        width: 100%; /* Largura dos cards */
+        margin: 5px; /* Espaço entre os cards */
+      }
+
+      .card img {
+        width: 100%; /* Ajuste o tamanho das imagens nos cards conforme necessário */
+        height: 200px; /* Altura das imagens nos cards */
+        object-fit: cover;
       }
     </style>
   </head>
@@ -47,7 +72,7 @@
         class="container-fluid d-flex justify-content-between align-items-center"
       >
         <img
-          src="img SOS.jpg"
+          src="img.SOS.jpg"
           width="100"
           height="100"
           class="d-inline-block align-top rounded-circle"
@@ -72,7 +97,13 @@
         </div>
         <!-- Fim da barra de pesquisa -->
         <div class="d-flex">
-          <a class="btn btn-primary m-3" href="#" role="button">Download</a>
+          <a
+            href="dowload.html"
+            class="btn btn-primary m-3"
+            href="#"
+            role="button"
+            >Download</a
+          >
           <button class="btn btn-primary m-3" type="submit">
             Configuração
           </button>
@@ -91,25 +122,41 @@
         <nav id="barralateral" class="col-lg-3">
           <h1 class="marca">Usuario</h1>
           <ul class="list-group">
-            <li class="list-group-item mb-4 border-3 border-dark border-solid">
-              LOGIN
-            </li>
-            <li class="list-group-item mb-4 border-3 border-dark border-solid">
-              CADASTRO
-            </li>
-            <li class="list-group-item mb-4 border-3 border-dark border-solid">
-              CONTATOS
-            </li>
+            <a href="Login.html">
+              <li
+                class="list-group-item mb-4 border-3 border-dark border-solid"
+              >
+                LOGIN
+              </li>
+            </a>
+            <a href="cadastro.html">
+              <li
+                class="list-group-item mb-4 border-3 border-dark border-solid"
+              >
+                CADASTRO
+              </li>
+            </a>
+            <a href="Historico.html">
+              <li
+                class="list-group-item mb-4 border-3 border-dark border-solid"
+              >
+                HISTÓRICO
+              </li>
+            </a>
             <li class="list-group-item mb-4 border-3 border-dark border-solid">
               RELÁTORIOS
             </li>
-            <li class="list-group-item mb-4 border-3 border-dark border-solid">
-              SOBRE
-            </li>
+            <a href="Sobre.html">
+              <li
+                class="list-group-item mb-4 border-3 border-dark border-solid"
+              >
+                SOBRE
+              </li>
+            </a>
           </ul>
         </nav>
         <!-- Conteúdo principal (carrossel) -->
-        <div id="conteudo" class="col-lg-9">
+        <div id="conteudo" class="col-lg-10">
           <div
             id="carouselExampleCaptions"
             class="carousel slide"
@@ -117,31 +164,43 @@
           >
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="img Pneus.jpeg" class="d-block w-100" alt="..." />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>
-                    Some representative placeholder content for the first slide.
-                  </p>
+                <img
+                  src="img_saocristovao.jpeg"
+                  class="d-block w-100"
+                  alt="..."
+                />
+                <div
+                  class="carousel-caption d-none d-md-block font-weight-bold"
+                >
+                  <h4>BORRACHARIA SÃO CRISTOVÃO</h4>
+                  <h5 class="font-weight-bold">
+                    A São Cristovão é a borracharia com a melhor nota em nosso
+                    site 4.9.
+                  </h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img Pneus.jpeg" class="d-block w-100" alt="..." />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>
-                    Some representative placeholder content for the second
-                    slide.
-                  </p>
+                <img src="img_Ferreira.jpeg" class="d-block w-100" alt="..." />
+                <div
+                  class="carousel-caption d-none d-md-block font-weight-bold"
+                >
+                  <h4>BORRACHARIA FERREIRA</h4>
+                  <h5 class="font-weight-bold">
+                    A Ferreira Pneus é uma das borracharias que tem a melhor
+                    nota em nossa site 4.8.
+                  </h5>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img Pneus.jpeg" class="d-block w-100" alt="..." />
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>
-                    Some representative placeholder content for the third slide.
-                  </p>
+                <img src="img_24horas.jpeg" class="d-block w-100" alt="..." />
+                <div
+                  class="carousel-caption d-none d-md-block font-weight-bold"
+                >
+                  <h4>BORRACHARIA 24 HORAS</h4>
+                  <h5 class="font-weight-bold">
+                    A borracharia 24 horas é uma das borracharias que tem a
+                    melhor nota em nossa site 4.8.
+                  </h5>
                 </div>
               </div>
             </div>
@@ -175,37 +234,53 @@
     </div>
 
     <div class="container">
-      <div class="row justify-content-center m-4">
-        <div class="card mx-2" style="width: 18rem">
-          <img src="img_caminh.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">CAMINHÃO</h5>
-            <p class="card-text">SERVIÇOS DE BORRACHARIA.</p>
-            <a href="#" class="btn btn-primary">SOLICITAR</a>
+      <div class="row justify-content-center m-2">
+        <div class="col-3">
+          <div class="d-flex justify-content-center align-items-center">
+            <div class="card mx-1" style="width: 16rem">
+              <img src="img_caminhao.jpeg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">CAMINHÃO</h5>
+                <p class="card-text">SERVIÇOS DE BORRACHARIA.</p>
+                <a href="Cliente.html" class="btn btn-primary">SOLICITAR</a>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="card mx-2" style="width: 18rem">
-          <img src="img_carro.avif" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">CARRO</h5>
-            <p class="card-text">SERVIÇOS DE BORRACHARIA.</p>
-            <a href="#" class="btn btn-primary">SOLICITAR</a>
+        <div class="col-3">
+          <div class="d-flex justify-content-center align-items-center">
+            <div class="card mx-1" style="width: 16rem">
+              <img src="img_carro.jpeg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">CARRO</h5>
+                <p class="card-text">SERVIÇOS DE BORRACHARIA.</p>
+                <a href="Cliente.html" class="btn btn-primary">SOLICITAR</a>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="card mx-2" style="width: 18rem">
-          <img src="img_moto.avif" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">MOTO</h5>
-            <p class="card-text">SERVIÇOS DE BORRACHARIA.</p>
-            <a href="#" class="btn btn-primary">SOLICITAR</a>
+        <div class="col-3">
+          <div class="d-flex justify-content-center align-items-center">
+            <div class="card mx-1" style="width: 16rem">
+              <img src="img_moto.jpeg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">MOTO</h5>
+                <p class="card-text">SERVIÇOS DE BORRACHARIA.</p>
+                <a href="Cliente.html" class="btn btn-primary">SOLICITAR</a>
+              </div>
+            </div>
           </div>
         </div>
-        <div class="card mx-2" style="width: 18rem">
-          <img src="img_van.jpg" class="card-img-top" alt="..." />
-          <div class="card-body">
-            <h5 class="card-title">VANS E UTILITÁRIOS</h5>
-            <p class="card-text">SERVIÇOS DE BORRACHARIA.</p>
-            <a href="#" class="btn btn-primary">SOLICITAR</a>
+        <div class="col-3">
+          <div class="d-flex justify-content-center align-items-center">
+            <div class="card mx-1" style="width: 16rem">
+              <img src="img_van.jpeg" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">VANS E UTILITÁRIOS</h5>
+                <p class="card-text">SERVIÇOS DE BORRACHARIA.</p>
+                <a href="Cliente.html" class="btn btn-primary">SOLICITAR</a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
