pre-interacao.html atualizada

--- a/src/Html/pre-interacao.html
+++ b/src/Html/pre-interacao.html
@@ -117,7 +117,7 @@
     
     <div class="popup" id="popup">
         <div class="popup-content">
-            <p>O conteúdo do seu pop-up aqui!</p>
+            <p>Buscando profissionais nas redondezas...</p>
             <p>Este pop-up será fechado em <span id="countdown">20</span> segundos.</p>
         </div>
     </div>
