--- a/src/Sobre.html
+++ b/src/Sobre.html
@@ -23,13 +23,15 @@
     <div
       class="container-fluid d-flex justify-content-between align-items-center"
     >
-      <img
-        src="img.SOS.jpg"
-        width="100"
-        height="100"
-        class="d-inline-block align-top rounded-circle"
-        alt="Logo"
-      />
+      <a href="Index.html">
+        <img
+          src="img SOS.jpg"
+          width="100"
+          height="100"
+          class="d-inline-block align-top rounded-circle"
+          alt="Logo"
+        />
+      </a>
 
       <h1>SOBRE</h1>
       <div class="d-flex">
@@ -37,9 +39,6 @@
           Download
         </a>
         <button class="btn btn-primary m-3" type="submit">Status</button>
-        <a href="Principal.html">
-          <input class="btn btn-primary m-3" type="button" value="Sair" />
-        </a>
       </div>
     </div>
   </header>
@@ -55,7 +54,7 @@
       <div class="row">
         <div class="col-md-6">
           <img
-            src="img.SOS.jpg"
+            src="img SOS.jpg"
             alt="..."
             class="img-fluid"
             style="max-width: 400px"
