--- a/src/Avaliação.html
+++ b/src/Avaliação.html
@@ -49,14 +49,12 @@
 <body>
     <header class="text-center">
         <div class="container">
-            <img src="Logotipo.jpg" class="logo" alt="Logo" />
+            <a href="Index.html">
+            <img src="img SOS.jpg" class="logo" alt="Logo" />
+        </a>
             <h1>Avaliação</h1>
-            <a class="btn btn-primary m-3" href="#" role="button">Home</a>
             <button class="btn btn-primary m-3">Histórico</button>
             <input class="btn btn-primary m-3" type="button" value="Notificações" />
-            <a href="Login.html">
-                <button class="btn btn-primary m-3">Sair</button>
-            </a>
     </header>
 
 
@@ -116,7 +114,7 @@
 
         <div class="row">
             <div class="col-md-6 mx-auto">
-                <div class "avaliacao">
+                <div class ="avaliacao">
                     <div class="avaliacao" id="avaliacao2">
                         <svg xmlns="http://www.w3.org/2000/svg" height="1em"
                             viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
@@ -142,7 +140,7 @@
 
         <div class="row">
             <div class="col-md-6 mx-auto">
-                <div class "avaliação">
+                <div class ="avaliação">
                     <div class="avaliacao" id="avaliacao3">
                         <svg xmlns="http://www.w3.org/2000/svg" height="1em"
                             viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
