--- a/src/Dowload.html
+++ b/src/Dowload.html
@@ -14,13 +14,15 @@
       <div
         class="container-fluid d-flex justify-content-between align-items-center"
       >
-        <img
-          src="img SOS.jpg"
-          width="100"
-          height="100"
-          class="d-inline-block align-top rounded-circle"
-          alt="Logo"
-        />
+        <a href="Index.html">
+          <img
+            src="img SOS.jpg"
+            width="100"
+            height="100"
+            class="d-inline-block align-top rounded-circle"
+            alt="Logo"
+          />
+        </a>
         <!-- Barra de pesquisa -->
         <div class="input-group" style="max-width: 700px">
           <input
@@ -43,9 +45,6 @@
           <button class="btn btn-primary m-3" type="submit">
             Configuração
           </button>
-          <a href="Principal.html">
-            <input class="btn btn-primary m-3" type="button" value="Sair" />
-          </a>
         </div>
       </div>
     </header>
