--- a/src/Index.html
+++ b/src/Index.html
@@ -30,11 +30,15 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap/dist/js/bootstrap.min.js"></script>
+
+   
+
     <style>
       /* Estilo para a barra lateral à esquerda */
       #barralateral {
         float: left;
         width: 20%;
+        text-align: center; 
       }
 
       /* Estilo para o conteúdo à direita */
@@ -46,16 +50,18 @@
       /* Estilo para o carrossel */
       .carousel {
         margin: 0 auto;
-        width: 90%; /* Ajuste o tamanho conforme necessário */
+        width: 95%; /* Ajuste o tamanho conforme necessário */
       }
 
       /* Estilo para os cards */
       .card-container {
         display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
       }
 
       .card {
-        width: 100%; /* Largura dos cards */
+        width: 15rem; /* Largura dos cards */
         margin: 5px; /* Espaço entre os cards */
       }
 
@@ -64,7 +70,15 @@
         height: 200px; /* Altura das imagens nos cards */
         object-fit: cover;
       }
+      #barralateral .btn {
+        width: 80%; /* Largura dos botões ocupando 100% do contêiner pai */
+        height: 50px; /* Altura dos botões (ajuste conforme necessário) */
+        margin-bottom: 30px; /* Espaço inferior entre os botões */
+      }
+      
     </style>
+    </script>
+    </script>
   </head>
   <body>
     <header class="bg-dark text-light p-3">
@@ -72,7 +86,7 @@
         class="container-fluid d-flex justify-content-between align-items-center"
       >
         <img
-          src="img.SOS.jpg"
+          src="img SOS.jpg"
           width="100"
           height="100"
           class="d-inline-block align-top rounded-circle"
@@ -123,35 +137,16 @@
           <h1 class="marca">Usuario</h1>
           <ul class="list-group">
             <a href="Login.html">
-              <li
-                class="list-group-item mb-4 border-3 border-dark border-solid"
-              >
-                LOGIN
-              </li>
+              <li class="btn btn-primary m-3" type="button">LOGIN</li>
             </a>
             <a href="cadastro.html">
-              <li
-                class="list-group-item mb-4 border-3 border-dark border-solid"
-              >
-                CADASTRO
-              </li>
+              <li class="btn btn-primary m-3" type="button">CADASTRO</li>
             </a>
             <a href="Historico.html">
-              <li
-                class="list-group-item mb-4 border-3 border-dark border-solid"
-              >
-                HISTÓRICO
-              </li>
+              <li class="btn btn-primary m-3" type="button">HISTÓRICO</li>
             </a>
-            <li class="list-group-item mb-4 border-3 border-dark border-solid">
-              RELÁTORIOS
-            </li>
             <a href="Sobre.html">
-              <li
-                class="list-group-item mb-4 border-3 border-dark border-solid"
-              >
-                SOBRE
-              </li>
+              <li class="btn btn-primary m-3" type="button">SOBRE</li>
             </a>
           </ul>
         </nav>
@@ -165,7 +160,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
-                  src="img_saocristovao.jpeg"
+                  src="img_saocristovao.jpg"
                   class="d-block w-100"
                   alt="..."
                 />
@@ -180,7 +175,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img_Ferreira.jpeg" class="d-block w-100" alt="..." />
+                <img src="img_Ferreira.jpg" class="d-block w-100" alt="..." />
                 <div
                   class="carousel-caption d-none d-md-block font-weight-bold"
                 >
@@ -192,7 +187,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="img_24horas.jpeg" class="d-block w-100" alt="..." />
+                <img src="img_24horas.jpg" class="d-block w-100" alt="..." />
                 <div
                   class="carousel-caption d-none d-md-block font-weight-bold"
                 >
@@ -229,59 +224,42 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <div class="row justify-content-center m-2">
-        <div class="col-3">
-          <div class="d-flex justify-content-center align-items-center">
-            <div class="card mx-1" style="width: 16rem">
-              <img src="img_caminhao.jpeg" class="card-img-top" alt="..." />
+          <!-- Cards -->
+          <div class="container mt-3 card-container">
+            <div class="card">
+              <img src="img_caminh.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">CAMINHÃO</h5>
                 <p class="card-text">SERVIÇOS DE BORRACHARIA.</p>
-                <a href="Cliente.html" class="btn btn-primary">SOLICITAR</a>
+                <a href="Login.html" class="btn btn-primary">SOLICITAR</a>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="d-flex justify-content-center align-items-center">
-            <div class="card mx-1" style="width: 16rem">
-              <img src="img_carro.jpeg" class="card-img-top" alt="..." />
+            <div class="card">
+              <img src="img_carro.avif" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">CARRO</h5>
                 <p class="card-text">SERVIÇOS DE BORRACHARIA.</p>
-                <a href="Cliente.html" class="btn btn-primary">SOLICITAR</a>
+                <a href="Login.html" class="btn btn-primary">SOLICITAR</a>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="d-flex justify-content-center align-items-center">
-            <div class="card mx-1" style="width: 16rem">
-              <img src="img_moto.jpeg" class="card-img-top" alt="..." />
+            <div class="card">
+              <img src="img_moto.avif" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">MOTO</h5>
                 <p class="card-text">SERVIÇOS DE BORRACHARIA.</p>
-                <a href="Cliente.html" class="btn btn-primary">SOLICITAR</a>
+                <a href="Login.html" class="btn btn-primary">SOLICITAR</a>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="col-3">
-          <div class="d-flex justify-content-center align-items-center">
-            <div class="card mx-1" style="width: 16rem">
-              <img src="img_van.jpeg" class="card-img-top" alt="..." />
+            <div class="card">
+              <img src="img_van.jpg" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">VANS E UTILITÁRIOS</h5>
                 <p class="card-text">SERVIÇOS DE BORRACHARIA.</p>
-                <a href="Cliente.html" class="btn btn-primary">SOLICITAR</a>
+                <a href="Login.html" class="btn btn-primary">SOLICITAR</a>
               </div>
             </div>
           </div>
+          <!-- Fim dos Cards -->
         </div>
       </div>
     </div>
