--- a/src/interacao.html
+++ b/src/interacao.html
@@ -1,45 +1,97 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-            rel="stylesheet"
-            href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
-    >
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+    />
     <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-    >
-    <link rel="stylesheet" href="style.css">
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>S.O.S. Pneus</title>
-</head>
+    <style>
+      .outer-chat-box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        padding: 10px;
+      }
 
-<body style="display: flex; flex-direction: column; justify-content: space-between; min-height: 100vh; margin: 0;">
-<header class="header">
-    <img src="Img/img_SOS.jpg" class="logo" alt="Logo" />
-    <h1>Home Cliente</h1>
-    <a class="btn btn-primary m-3" href="#" role="button">Home</a>
-    <button class="btn btn-primary m-3">Histórico</button>
-    <input class="btn btn-primary m-3" type="button" value="Notificações" />
-    <button class="btn btn-primary m-3">Sair</button>
-</header>
+      .inner-chat-box {
+        width: 40%;
+        padding: 15px;
+        border: 1px solid #000;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 580px; /* Aumento da altura dos quadrados */
+      }
 
-<div class="container mt-4" style="flex: 2; display: flex; justify-content: center; align-items: center;">
-    <div class="outer-chat-box border-2">
+      .message-input {
+        width: 100%;
+        height: 100%;
+      }
+
+      .button-container {
+        display: flex;
+        justify-content: space-between; /* Coloca os botões "Enviar" e "Avaliação" nas extremidades */
+        margin-top: 10px;
+        width: 100%;
+      }
+
+      .send-button,
+      .evaluation-button {
+        width: 20%; /* Define a largura dos botões "Enviar" e "Avaliação" */
+      }
+    </style>
+  </head>
+
+  <body
+    style="
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      min-height: 100vh;
+      margin: 0;
+    "
+  >
+    <header class="header">
+      <a href="pre-interacao.html">
+        <img src="img SOS.jpg" class="logo" alt="Logo" />
+      </a>
+      <h1>Home Cliente</h1>
+      <button class="btn btn-primary m-3">Histórico</button>
+      <input class="btn btn-primary m-3" type="button" value="Notificações" />
+    </header>
+
+    <div class="container mt-4" style="flex: 2">
+      <div class="outer-chat-box">
         <div class="inner-chat-box">
-            <textarea class="form-control message-input border-2" placeholder="Digite sua mensagem"></textarea>
+          <textarea
+            class="form-control message-input border-2"
+            placeholder="Digite sua mensagem"
+          ></textarea>
+          <div class="button-container">
+            <div class="send-button">
+              <button class="btn btn-primary">Enviar</button>
+            </div>
+            <div class="evaluation-button">
+              <a href="Avaliação.html">
+                <button class="btn btn-primary">Avaliação</button>
+              </a>
+            </div>
+          </div>
         </div>
-        <div class="send-button">
-            <button class="btn btn-primary">Enviar</button>
-        </div>
+      </div>
     </div>
-</div>
 
-<footer class="bg-dark text-light text-center py-2">
-    <p>&copy; 2023 S.O.S. Pneus. Todos os direitos reservados.</p>
-</footer>
-</body>
-
+    <footer class="bg-dark text-light text-center py-2">
+      <p>&copy; 2023 S.O.S. Pneus. Todos os direitos reservados.</p>
+    </footer>
+  </body>
 </html>
