--- a/src/pre-interacao.html
+++ b/src/pre-interacao.html
@@ -35,12 +35,12 @@
   </head>
 
   <header class="header">
+    <a href="Index.html">
     <img src="img SOS.jpg" class="logo" alt="Logo" />
+  </a>
     <h1>Home Cliente</h1>
-    <a class="btn btn-primary m-3" href="#" role="button">Home</a>
     <button class="btn btn-primary m-3">Histórico</button>
     <input class="btn btn-primary m-3" type="button" value="Notificações" />
-    <button class="btn btn-primary m-3">Sair</button>
   </header>
 
   <body>
