--- a/src/Login.html
+++ b/src/Login.html
@@ -20,7 +20,7 @@
         min-height: 100vh;
         margin: 0;
         padding: 0;
-        padding-top: 300px; /* Adiciona um preenchimento superior igual à altura do header fixo */
+        padding-top: 300px;
       }
 
       header {
