--- a/src/Sobre.html
+++ b/src/Sobre.html
@@ -36,9 +36,9 @@
       }
 
       article iframe {
-        margin-top: 5px; /* Adicione a quantidade de margem superior desejada para o vídeo */
-        width: 100%; /* Defina a largura do vídeo para ocupar 100% do contêiner pai */
-        height: 100%; /* Defina a altura do vídeo para ocupar 100% do contêiner pai */
+        margin-top: 5px;
+        width: 100%;
+        height: 100%;
       }
     </style>
 
