--- a/src/cadastro.html
+++ b/src/cadastro.html
@@ -41,13 +41,13 @@
       }
 
       .main-content {
-        margin-top: 20px; /* Adicionando margem superior para separar do header */
+        margin-top: 20px;
       }
 
       .form-card {
-        width: 100%; /* 100% da largura disponível */
-        max-width: 600px; /* Definindo uma largura máxima */
-        margin: 20px auto; /* Centralizando o card com margem superior e inferior de 20px */
+        width: 100%;
+        max-width: 600px;
+        margin: 20px auto;
         padding: 20px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         border-radius: 10px;
