--- a/src/cliente.html
+++ b/src/cliente.html
@@ -17,7 +17,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- Adicione a API do Google Maps com sua chave -->
     <script
       async
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQRoUAz_p1A304EFpZblVlq315hoEt89Q&callback=initMap"
@@ -50,10 +49,9 @@
         margin-top: 20px;
       }
 
-      /* Estilos para os quadrados */
       .square {
-        width: 1100px; /* Largura personalizável */
-        height: 200px; /* Altura personalizável */
+        width: 1100px;
+        height: 200px;
         background-color: #fcfcfc;
         border: 2px solid #ccc;
         border-radius: 10px;
@@ -133,7 +131,7 @@
 
             map = new google.maps.Map(document.getElementById("map"), {
               center: userLocation,
-              zoom: 15, // Ajuste o nível de zoom conforme necessário
+              zoom: 15,
             });
 
             new google.maps.Marker({
@@ -146,7 +144,7 @@
             service.nearbySearch(
               {
                 location: userLocation,
-                radius: 20000, // Raio de 20 km
+                radius: 20000,
                 type: "car_repair",
               },
               function (results, status) {
