--- a/src/interacao.html
+++ b/src/interacao.html
@@ -37,7 +37,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        height: 560px; /* Aumento da altura dos quadrados */
+        height: 560px;
       }
 
       .message-input {
@@ -47,14 +47,14 @@
 
       .button-container {
         display: flex;
-        justify-content: space-between; /* Coloca os botões "Enviar" e "Avaliação" nas extremidades */
+        justify-content: space-between;
         margin-top: 10px;
         width: 100%;
       }
 
       .send-button,
       .evaluation-button {
-        width: 20%; /* Define a largura dos botões "Enviar" e "Avaliação" */
+        width: 20%;
       }
     </style>
   </head>
