--- a/src/Avaliação.html
+++ b/src/Avaliação.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-...."
+      crossorigin="anonymous"
+    />
+
     <title>S.O.S. Pneus</title>
     <style>
         body {
@@ -53,8 +60,12 @@
             <img src="img SOS.jpg" class="logo" alt="Logo" />
         </a>
             <h1>Avaliação</h1>
+            <a href="Historico.html">
             <button class="btn btn-primary m-3">Histórico</button>
-            <input class="btn btn-primary m-3" type="button" value="Notificações" />
+        </a>
+            <a href="Login.html" class="btn btn-primary m-3">
+                <i class="fa-solid fa-arrow-right-from-bracket fa-bounce"></i> Log Out
+              </a>
     </header>
 
 
