--- a/src/Dowload.html
+++ b/src/Dowload.html
@@ -8,6 +8,30 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-...."
+      crossorigin="anonymous"
+    />
+    <style>
+      .border-shadow {
+        border: 1px solid rgba(0, 0, 0, 0.125);
+        box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+      }
+
+      body {
+        position: relative;
+        min-height: 100vh;
+        margin-bottom: -100px;
+      }
+
+      footer {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <header class="bg-dark text-light p-3">
@@ -23,7 +47,6 @@
             alt="Logo"
           />
         </a>
-        <!-- Barra de pesquisa -->
         <div class="input-group" style="max-width: 700px">
           <input
             type="text"
@@ -33,18 +56,17 @@
             aria-describedby="button-addon2"
           />
           <div class="input-group-append">
-            <!-- Botão de Pesquisar azul -->
             <button class="btn btn-primary" type="button" id="button-addon2">
               Pesquisar
             </button>
-            <!-- Fim do botão de Pesquisar azul -->
           </div>
         </div>
-        <!-- Fim da barra de pesquisa -->
+
         <div class="d-flex">
-          <button class="btn btn-primary m-3" type="submit">
-            Configuração
-          </button>
+          <a href="Login.html" class="btn btn-primary m-3">
+            <i class="fa-solid fa-arrow-right-from-bracket fa-bounce"></i> Log
+            Out
+          </a>
         </div>
       </div>
     </header>
@@ -54,7 +76,7 @@
 
       <div class="row justify-content-center mt-4">
         <div class="col-md-4 mb-4">
-          <div class="card">
+          <div class="card border-shadow">
             <img
               src="img SOS.jpg"
               class="card-img-top rounded-circle"
@@ -70,7 +92,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card">
+          <div class="card border-shadow">
             <img
               src="img SOS.jpg"
               class="card-img-top rounded-circle"
@@ -88,7 +110,7 @@
       </div>
     </div>
 
-    <footer class="bg-dark text-light text-center py-2 mt-auto">
+    <footer class="bg-dark text-light text-center py-2">
       <p>&copy; 2023 S.O.S. Pneus. Todos os direitos reservados.</p>
     </footer>
 
