--- a/src/Historico.html
+++ b/src/Historico.html
@@ -9,6 +9,13 @@
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="style.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-...."
+      crossorigin="anonymous"
+    />
     <title>S.O.S. Pneus</title>
   </head>
 
@@ -18,8 +25,9 @@
         <img src="img SOS.jpg" class="logo" alt="Logo" />
       </a>
       <h1>Home Cliente</h1>
-      <button class="btn btn-primary m-3">Histórico</button>
-      <input class="btn btn-primary m-3" type="button" value="Notificações" />
+      <a href="Login.html" class="btn btn-primary m-3">
+        <i class="fa-solid fa-arrow-right-from-bracket fa-bounce"></i> Log Out
+      </a>
     </header>
 
     <main>
