--- a/src/Sobre.html
+++ b/src/Sobre.html
@@ -17,6 +17,31 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
     />
 
+    <script
+      src="https://kit.fontawesome.com/dad3ff2ba1.js"
+      crossorigin="anonymous"
+    ></script>
+
+    <style>
+      body,
+      html {
+        margin: 0;
+        padding: 0;
+      }
+
+      footer {
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
+
+      article iframe {
+        margin-top: 5px;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+
     <title>S.O.S. Pneus</title>
   </head>
   <header class="bg-dark text-light p-3">
@@ -38,14 +63,16 @@
         <a class="btn btn-primary m-3" href="dowload.html" role="button">
           Download
         </a>
-        <button class="btn btn-primary m-3" type="submit">Status</button>
+        <a href="Login.html" class="btn btn-primary m-3">
+          <i class="fa-solid fa-arrow-right-from-bracket fa-bounce"></i> Log Out
+        </a>
       </div>
     </div>
   </header>
 
   <body>
     <section id="conteudo" class="container mt-5">
-      <div id="Album Rio de Janeiro " class="m-1">
+      <div id="Pneu" class="m-1">
         <h3 class="border-bottom border-dark border-3">
           Serviços do S.O.S. Pneus
         </h3>
