--- a/src/cliente.html
+++ b/src/cliente.html
@@ -11,10 +11,20 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+
+    <script
+      src="https://kit.fontawesome.com/dad3ff2ba1.js"
+      crossorigin="anonymous"
+    ></script>
+
     <title>S.O.S. Pneus</title>
     <style>
       body {
         font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        height: 100%;
+        background-color: #f8f9fa;
       }
 
       .header {
@@ -38,16 +48,59 @@
         margin-top: 20px;
       }
 
-      /* Estilos para os quadrados */
       .square {
-        width: 1100px; /* Largura personalizável */
-        height: 200px; /* Altura personalizável */
+        width: 95%;
+        height: 200px;
         background-color: #fcfcfc;
         border: 2px solid #ccc;
         border-radius: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
+        margin: 0 auto;
+        margin-bottom: 20px;
+      }
+
+      #map {
+        display: none;
+        height: 400px;
+        width: 100%;
+        margin-top: 20px;
+      }
+
+      footer {
+        background-color: #343a40;
+        color: #ffffff;
+        text-align: center;
+        padding: 10px;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+      }
+
+      main {
+        padding-bottom: 60px;
+      }
+
+      .botao {
+        width: 90%;
+        margin: auto;
+      }
+
+      .select-veiculo {
+        width: 100%;
+      }
+
+      @media (min-width: 768px) {
+        .botao {
+          width: 90%;
+          margin: auto;
+        }
+
+        .select-veiculo {
+          width: 90%;
+          margin: auto;
+        }
       }
     </style>
   </head>
@@ -56,18 +109,21 @@
     <header class="header">
       <img src="img SOS.jpg" class="logo" alt="Logo" />
       <h1>Home Cliente</h1>
-      <a class="btn btn-primary m-3" href="#" role="button">Home</a>
       <button class="btn btn-primary m-3">Histórico</button>
-      <input class="btn btn-primary m-3" type="button" value="Notificações" />
-      <button class="btn btn-primary m-3">Sair</button>
+      <a href="Login.html" class="btn btn-primary m-3">
+        <i class="fa-solid fa-arrow-right-from-bracket fa-bounce"></i> Log Out
+      </a>
     </header>
 
     <main class="container">
       <div class="text-center mb-4">
         <div class="square mx-auto m-3 d-flex flex-column align-items-center">
           <h2>VEÍCULO ATUAL</h2>
-          <div class="botao m-3" style="width: 95%">
-            <select class="form-select" aria-label="Selecione seu Veículo">
+          <div class="botao m-3">
+            <select
+              class="form-select select-veiculo"
+              aria-label="Selecione seu Veículo"
+            >
               <option selected disabled>Selecione seu Veículo</option>
               <option value="carro">Carro</option>
               <option value="moto">Moto</option>
@@ -81,21 +137,89 @@
         <div class="square mx-auto d-flex flex-column align-items-center">
           <h2>BORRACHARIA</h2>
           <div class="form-group">
-            <button type="submit" class="btn btn-primary">Iniciar Busca</button>
+            <button
+              type="button"
+              class="btn btn-primary mt-3 botao"
+              onclick="iniciarBusca()"
+            >
+              Iniciar Busca
+            </button>
           </div>
         </div>
       </div>
 
       <div class="text-center">
-        <div class="square mx-auto m-3">
-          <h2>Resultados da Busca:</h2>
-          <!-- Aqui você pode adicionar a área para exibir os resultados -->
-        </div>
+        <div id="map"></div>
       </div>
     </main>
 
-    <footer class="bg-dark text-light text-center py-3">
+    <footer>
       <p>&copy; 2023 S.O.S. Pneus. Todos os direitos reservados.</p>
     </footer>
+
+    <script>
+      function iniciarBusca() {
+        document.getElementById("map").style.display = "block";
+        const center = { lat: -19.91482, lng: -44.0818 };
+        const map = new google.maps.Map(document.getElementById("map"), {
+          zoom: 14,
+          center: center,
+        });
+
+        const cepMarker = new google.maps.Marker({
+          position: center,
+          map: map,
+          title: "Nova Localização",
+          icon: "http://maps.google.com/mapfiles/ms/icons/blue-dot.png",
+        });
+
+        const borracharias = [
+          {
+            lat: -19.918043760327734,
+            lng: -44.07822721650027,
+            title: "Borracharia 1",
+          },
+          {
+            lat: -19.924365288678963,
+            lng: -44.08767209222495,
+            title: "Borracharia 2",
+          },
+          {
+            lat: -19.908506961009437,
+            lng: -44.07562777776911,
+            title: "Borracharia 3",
+          },
+          {
+            lat: -19.92179831480071,
+            lng: -44.068661468885786,
+            title: "Borracharia 4",
+          },
+          {
+            lat: -19.91611243917804,
+            lng: -44.069784243937164,
+            title: "Borracharia 5",
+          },
+        ];
+
+        borracharias.forEach((borracharia) => {
+          const marker = new google.maps.Marker({
+            position: { lat: borracharia.lat, lng: borracharia.lng },
+            map: map,
+            title: borracharia.title,
+            icon: "http://maps.google.com/mapfiles/ms/icons/red-dot.png",
+          });
+
+          marker.addListener("click", function () {
+            window.location.href =
+              "pre-interacao.html?borracharia=" + borracharia.title;
+          });
+        });
+      }
+    </script>
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQRoUAz_p1A304EFpZblVlq315hoEt89Q&callback=initMap"
+      async
+      defer
+    ></script>
   </body>
 </html>
